[gd_scene load_steps=2 format=3 uid="uid://c1m56ucthsuww"]

[ext_resource type="Script" path="res://addons/quest_editor/scripts/nodes/stage_node.gd" id="1_g833m"]

[node name="stage_node" type="GraphNode"]
custom_minimum_size = Vector2(300, 400)
offset_right = 300.0
offset_bottom = 400.0
title = "Quest Stage"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = true
slot/4/left_type = 1
slot/4/left_color = Color(0, 0, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(0, 0, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = null
slot/5/right_enabled = true
slot/5/right_type = 0
slot/5/right_color = Color(1, 1, 1, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
script = ExtResource("1_g833m")

[node name="stage_id_box" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="stage_id_box"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "ID"

[node name="stage_id" type="LineEdit" parent="stage_id_box"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Description
"

[node name="quest_desc" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="after_finish_box2" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="after_finish_box2"]
layout_mode = 2
size_flags_horizontal = 3
text = "After Finish Prompt"

[node name="after_finish" type="TextEdit" parent="after_finish_box2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="mutex" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Mutually Exclusive"

[node name="requirements" type="Label" parent="."]
layout_mode = 2
text = "Requirements
"

[node name="next_stage" type="Label" parent="."]
layout_mode = 2
text = "Next Stage
"
